bit of cleaning

--- a/SekiDiscord/SekiDiscord.csproj
+++ b/SekiDiscord/SekiDiscord.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Stanford.NLP.CoreNLP" Version="3.9.1" />
+    <PackageReference Include="Stanford.NLP.Parser" Version="3.9.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
